--- a/AcademicReports/requirements.txt
+++ b/AcademicReports/requirements.txt
@@ -1,12 +1,51 @@
+amqp==5.3.1
 asgiref==3.9.2
+billiard==4.2.2
+Brotli==1.1.0
+celery==5.5.3
+certifi==2025.10.5
+cffi==2.0.0
+charset-normalizer==3.4.3
+click==8.3.0
+click-didyoumean==0.3.1
+click-plugins==1.1.1.2
+click-repl==0.3.0
+colorama==0.4.6
+cron_descriptor==2.0.6
+cssselect2==0.8.0
 Django==5.2.6
+django-celery-beat==2.8.1
 django-cors-headers==4.9.0
 django-filter==25.1
+django-timezone-field==7.1
+django_celery_results==2.6.0
 djangorestframework==3.16.1
 djangorestframework_simplejwt==5.5.1
+fonttools==4.60.1
+idna==3.10
+kombu==5.5.4
 Markdown==3.9
+packaging==25.0
 pillow==11.3.0
+prompt_toolkit==3.0.52
 psycopg2-binary==2.9.10
+pycparser==2.23
+pydyf==0.11.0
 PyJWT==2.10.1
+pyphen==0.17.2
+python-crontab==3.3.0
+python-dateutil==2.9.0.post0
+redis==5.2.1
+requests==2.32.5
+six==1.17.0
 sqlparse==0.5.3
+tinycss2==1.4.0
+tinyhtml5==2.0.0
+typing_extensions==4.15.0
 tzdata==2025.2
+urllib3==2.5.0
+vine==5.1.0
+wcwidth==0.2.14
+weasyprint==66.0
+webencodings==0.5.1
+zopfli==0.2.3.post1
