--- a/AcademicReports/requirements.txt
+++ b/AcademicReports/requirements.txt
@@ -25,7 +25,6 @@ django-timezone-field==7.1
 django_celery_results==2.6.0
 djangorestframework==3.16.1
 djangorestframework_simplejwt==5.5.1
-
 docutils==0.21.2
 et_xmlfile==2.0.0
 fonttools==4.60.1
@@ -38,6 +37,7 @@ Markdown==3.9
 MarkupSafe==3.0.3
 openpyxl==3.1.5
 packaging==25.0
+pdfkit==1.0.0
 pillow==11.3.0
 prompt_toolkit==3.0.52
 psycopg2-binary==2.9.10
@@ -72,4 +72,3 @@ vine==5.1.0
 wcwidth==0.2.14
 webencodings==0.5.1
 zopfli==0.2.3.post1
-#
