--- a/AcademicReports/requirements.txt
+++ b/AcademicReports/requirements.txt
@@ -45,6 +45,7 @@ pycparser==2.23
 pydyf==0.11.0
 Pygments==2.19.2
 PyJWT==2.10.1
+PyPDF2==3.0.1
 pyphen==0.17.2
 python-crontab==3.3.0
 python-dateutil==2.9.0.post0
