--- a/AcademicReports/requirements.txt
+++ b/AcademicReports/requirements.txt
@@ -49,6 +49,7 @@ PyPDF2==3.0.1
 pyphen==0.17.2
 python-crontab==3.3.0
 python-dateutil==2.9.0.post0
+python-dotenv==1.2.1
 redis==5.2.1
 requests==2.32.5
 roman-numerals-py==3.1.0
